# paraminer

./: .gitignore  .gitmodules  AUTHORS  BinaryMatrix.cpp  BinaryMatrix.h  CException.h  CMakeLists.txt  Makefile.am  README  README.dev  README.dev.org  README.org  TransactionSequence.cpp  clogen.cpp  clogen.hpp  clogen_local.hpp  clogen_local_cgraph.cpp  clogen_local_cyclic_strict.cpp  clogen_local_dag.cpp  clogen_local_graduals.cpp  clogen_local_itemsets.cpp  clogen_local_periodic.cpp  configure.ac  dag  database.cpp  database.hpp  element.cpp  element.hpp  fim_closed  glcm  itemset_specific.cpp  itemset_specific.hpp  melinda_local.hpp  pattern.cpp  pattern.hpp  readme.org  utils.cpp  utils.hpp
dag/: tmp
dag/Hughes/: .table_correspondance  2007-03-23-01.00013  2007-03-23-01.00014  2007-03-23-01.00020  2007-03-23-01.00024  2007-03-23-01.00035  2007-03-23-01.00040  2007-03-23-01.00043  2007-03-23-01.00052  2007-03-23-01.00058  2007-03-23-01.00059  2007-03-23-01.00064  2007-03-23-01.00070  2007-03-23-01.00073  2007-03-23-01.00085  2007-03-23-01.00089  2007-03-23-01.00094  2007-03-23-01.00101  2007-03-23-01.00111  2007-03-23-01.00121  2007-03-23-01.00130  2007-03-23-01.00135  2007-03-23-01.00141  2007-03-23-01.00143  2007-03-23-01.00153  2007-03-23-01.00166  2007-03-23-01.00178  2007-03-23-01.00184  2007-03-23-01.00188  2007-03-23-01.00190  2007-03-23-01.00192  2007-03-23-01.00199  2007-03-23-01.00207  2007-03-23-01.00215  2007-03-23-01.00216  2007-03-23-01.00229  2007-03-23-01.00230  2007-03-23-01.00231  2007-03-23-01.00234  2007-03-23-01.00236  (+112 more)
dag/Hughes/.svn/: entries
dag/Hughes/.svn/text-base/: 2007-03-23-01.00011.svn-base  2007-03-23-01.00019.svn-base  2007-03-23-01.00022.svn-base  2007-03-23-01.00025.svn-base  2007-03-23-01.00028.svn-base  2007-03-23-01.00034.svn-base  2007-03-23-01.00039.svn-base  2007-03-23-01.00042.svn-base  2007-03-23-01.00044.svn-base  2007-03-23-01.00049.svn-base  2007-03-23-01.00054.svn-base  2007-03-23-01.00055.svn-base  2007-03-23-01.00062.svn-base  2007-03-23-01.00067.svn-base  (+134 more)
dag/test/: 0.dag  1.dag
data/: Makefile.am
data/cgraph/: test.dag
data/cgraph/Hughes/: 2007-03-23-01.00003  2007-03-23-01.00008  2007-03-23-01.00016  2007-03-23-01.00023  2007-03-23-01.00037  2007-03-23-01.00046  2007-03-23-01.00065  2007-03-23-01.00071  2007-03-23-01.00072  2007-03-23-01.00077  2007-03-23-01.00088  2007-03-23-01.00090  2007-03-23-01.00093  2007-03-23-01.00096  2007-03-23-01.00102  2007-03-23-01.00109  2007-03-23-01.00112  2007-03-23-01.00146  2007-03-23-01.00162  2007-03-23-01.00163  2007-03-23-01.00172  2007-03-23-01.00183  2007-03-23-01.00187  2007-03-23-01.00191  2007-03-23-01.00198  2007-03-23-01.00206  2007-03-23-01.00210  2007-03-23-01.00211  2007-03-23-01.00213  2007-03-23-01.00226  2007-03-23-01.00245  2007-03-23-01.00246  2007-03-23-01.00250  2007-03-23-01.00253  2007-03-23-01.00265  2007-03-23-01.00269  2007-03-23-01.00278  2007-03-23-01.00299  2007-03-23-01.00300  2007-03-23-01.00311  (+107 more)
data/crg/: Hughes-120.gspan  Hughes10-100.gspan  convert_to_gspan.pl  gspan_remove_1graphs.pl
data/crg/Hughes/: 2007-03-23-01.00001  2007-03-23-01.00002  2007-03-23-01.00004  2007-03-23-01.00006  2007-03-23-01.00007  2007-03-23-01.00009  2007-03-23-01.00010  2007-03-23-01.00012  2007-03-23-01.00015  2007-03-23-01.00017  2007-03-23-01.00018  2007-03-23-01.00021  2007-03-23-01.00026  2007-03-23-01.00027  2007-03-23-01.00029  2007-03-23-01.00030  2007-03-23-01.00031  2007-03-23-01.00032  2007-03-23-01.00033  2007-03-23-01.00036  2007-03-23-01.00038  2007-03-23-01.00041  2007-03-23-01.00045  2007-03-23-01.00047  2007-03-23-01.00048  2007-03-23-01.00050  2007-03-23-01.00051  2007-03-23-01.00053  2007-03-23-01.00056  2007-03-23-01.00057  2007-03-23-01.00060  2007-03-23-01.00061  2007-03-23-01.00063  2007-03-23-01.00066  2007-03-23-01.00068  2007-03-23-01.00069  2007-03-23-01.00074  2007-03-23-01.00075  2007-03-23-01.00076  2007-03-23-01.00079  (+513 more)
data/crg/Hughes10/: 2007-03-23-01.00005
data/graduals/: 1000.data  C250-A100-50.data  C500-A100-50.data  C500-A100.data  C500-A150.data  C500-A200.data  C500-A250-50.data  C500-A300.data  C500-A350.data  C500-A400-50.data  C500-A50.data  F20Att1000Li.data  F20Att300Li.data  I4408.data  test4.data  test_merge.data
doc/: clogen.tex  readme.html  readme.org  readme.txt  stylesheet.css
doc/website_src/: .#header.html  .htaccess  Makefile  counter.php  index.org  index.php  main.org  publish_config.el
doc/website_src/css/: style.css
doc/website_src/include/: footer.org  header.org
grad/: DATA
grad/DATA/: F20Att700Li.data
scripts/: Makefile.am  crg_compare_nbr.sh  fim_compare_nbr.sh  fim_full_compare.sh  gri_full_compare.sh  sort_line.pl  stat_traces.pl  stats.pl  timing.sh
src/: BinaryMatrix.cpp  BinaryMatrix.h  CMakeLists.txt  Makefile.am  bool_matrix.hpp  clogen.cpp  clogen.hpp  clogen_local.hpp  clogen_local_cgraph.cpp  clogen_local_graduals.cpp  clogen_local_itemsets.cpp  clogen_local_periodic.cpp  convert_threshold.sh  copy_to_bins.sh  database.cpp  database.hpp  element.cpp  element.hpp  melinda_local.hpp  paraminer.cpp  paraminer.hpp  paraminer_local.hpp  paraminer_local_cgraphs.cpp  paraminer_local_dag.cpp  paraminer_local_graduals.cpp  paraminer_local_graduals_gen.cpp  paraminer_local_itemsets.cpp  pattern.cpp  pattern.hpp  test_frame.cpp  utils.cpp  utils.hpp
src/test/: CMakeLists.txt  frequent_itemset_basic.sh  grad_glcm_full.sh  set_compare_with_excluded_elements.cpp  transpose.cpp
src/test/expected_output/: grad_test_equal@1
test/: CMakeLists.txt  cgraph_gspan_test.sh  compare_outputs.sh  full_compare.sh  grad_glcm_full.sh  is_included_1d.cpp  sort_line_grads.pl
test/expected_output/: grad_test1_50  grad_test_equal@1  grad_test_merge@1
tests/: Makefile.am  crg_compare_nbr.sh  fim_compare_nbr.sh  fim_full_compare.sh  frequent_itemset_basic.sh  sort_line.pl  test_crg_simple.sh  test_fim_full_compare.sh  test_fim_full_compare_mt.sh  test_fim_simple.sh  test_fim_simple_mt.sh  test_gri_full_compare.sh  tests-env.sh.in
tests/expected_output/: grad_test1_50  grad_test_merge@1
