datasetdir = $(datadir)/datasets/

nobase_dist_dataset_DATA = \
fim/mushroom.dat \
gri/test.dat \
crg/Hughes-120.gspan \
crg/Hughes/2007-03-23-01.00001 \
crg/Hughes/2007-03-23-01.00002 \
crg/Hughes/2007-03-23-01.00003 \
crg/Hughes/2007-03-23-01.00004 \
crg/Hughes/2007-03-23-01.00005 \
crg/Hughes/2007-03-23-01.00006 \
crg/Hughes/2007-03-23-01.00007 \
crg/Hughes/2007-03-23-01.00008 \
crg/Hughes/2007-03-23-01.00009 \
crg/Hughes/2007-03-23-01.00010 \
crg/Hughes/2007-03-23-01.00011 \
crg/Hughes/2007-03-23-01.00012 \
crg/Hughes/2007-03-23-01.00013 \
crg/Hughes/2007-03-23-01.00014 \
crg/Hughes/2007-03-23-01.00015 \
crg/Hughes/2007-03-23-01.00016 \
crg/Hughes/2007-03-23-01.00017 \
crg/Hughes/2007-03-23-01.00018 \
crg/Hughes/2007-03-23-01.00019 \
crg/Hughes/2007-03-23-01.00020 \
crg/Hughes/2007-03-23-01.00021 \
crg/Hughes/2007-03-23-01.00022 \
crg/Hughes/2007-03-23-01.00023 \
crg/Hughes/2007-03-23-01.00024 \
crg/Hughes/2007-03-23-01.00025 \
crg/Hughes/2007-03-23-01.00026 \
crg/Hughes/2007-03-23-01.00027 \
crg/Hughes/2007-03-23-01.00028 \
crg/Hughes/2007-03-23-01.00029 \
crg/Hughes/2007-03-23-01.00030 \
crg/Hughes/2007-03-23-01.00031 \
crg/Hughes/2007-03-23-01.00032 \
crg/Hughes/2007-03-23-01.00033 \
crg/Hughes/2007-03-23-01.00034 \
crg/Hughes/2007-03-23-01.00035 \
crg/Hughes/2007-03-23-01.00036 \
crg/Hughes/2007-03-23-01.00037 \
crg/Hughes/2007-03-23-01.00038 \
crg/Hughes/2007-03-23-01.00039 \
crg/Hughes/2007-03-23-01.00040 \
crg/Hughes/2007-03-23-01.00041 \
crg/Hughes/2007-03-23-01.00042 \
crg/Hughes/2007-03-23-01.00043 \
crg/Hughes/2007-03-23-01.00044 \
crg/Hughes/2007-03-23-01.00045 \
crg/Hughes/2007-03-23-01.00046 \
crg/Hughes/2007-03-23-01.00047 \
crg/Hughes/2007-03-23-01.00048 \
crg/Hughes/2007-03-23-01.00049 \
crg/Hughes/2007-03-23-01.00050 \
crg/Hughes/2007-03-23-01.00051 \
crg/Hughes/2007-03-23-01.00052 \
crg/Hughes/2007-03-23-01.00053 \
crg/Hughes/2007-03-23-01.00054 \
crg/Hughes/2007-03-23-01.00055 \
crg/Hughes/2007-03-23-01.00056 \
crg/Hughes/2007-03-23-01.00057 \
crg/Hughes/2007-03-23-01.00058 \
crg/Hughes/2007-03-23-01.00059 \
crg/Hughes/2007-03-23-01.00060 \
crg/Hughes/2007-03-23-01.00061 \
crg/Hughes/2007-03-23-01.00062 \
crg/Hughes/2007-03-23-01.00063 \
crg/Hughes/2007-03-23-01.00064 \
crg/Hughes/2007-03-23-01.00065 \
crg/Hughes/2007-03-23-01.00066 \
crg/Hughes/2007-03-23-01.00067 \
crg/Hughes/2007-03-23-01.00068 \
crg/Hughes/2007-03-23-01.00069 \
crg/Hughes/2007-03-23-01.00070 \
crg/Hughes/2007-03-23-01.00071 \
crg/Hughes/2007-03-23-01.00072 \
crg/Hughes/2007-03-23-01.00073 \
crg/Hughes/2007-03-23-01.00074 \
crg/Hughes/2007-03-23-01.00075 \
crg/Hughes/2007-03-23-01.00076 \
crg/Hughes/2007-03-23-01.00077 \
crg/Hughes/2007-03-23-01.00078 \
crg/Hughes/2007-03-23-01.00079 \
crg/Hughes/2007-03-23-01.00080 \
crg/Hughes/2007-03-23-01.00081 \
crg/Hughes/2007-03-23-01.00082 \
crg/Hughes/2007-03-23-01.00083 \
crg/Hughes/2007-03-23-01.00084 \
crg/Hughes/2007-03-23-01.00085 \
crg/Hughes/2007-03-23-01.00086 \
crg/Hughes/2007-03-23-01.00087 \
crg/Hughes/2007-03-23-01.00088 \
crg/Hughes/2007-03-23-01.00089 \
crg/Hughes/2007-03-23-01.00090 \
crg/Hughes/2007-03-23-01.00091 \
crg/Hughes/2007-03-23-01.00092 \
crg/Hughes/2007-03-23-01.00093 \
crg/Hughes/2007-03-23-01.00094 \
crg/Hughes/2007-03-23-01.00095 \
crg/Hughes/2007-03-23-01.00096 \
crg/Hughes/2007-03-23-01.00097 \
crg/Hughes/2007-03-23-01.00098 \
crg/Hughes/2007-03-23-01.00099 \
crg/Hughes/2007-03-23-01.00100 \
crg/Hughes/2007-03-23-01.00101 \
crg/Hughes/2007-03-23-01.00102 \
crg/Hughes/2007-03-23-01.00103 \
crg/Hughes/2007-03-23-01.00104 \
crg/Hughes/2007-03-23-01.00105 \
crg/Hughes/2007-03-23-01.00106 \
crg/Hughes/2007-03-23-01.00107 \
crg/Hughes/2007-03-23-01.00108 \
crg/Hughes/2007-03-23-01.00109 \
crg/Hughes/2007-03-23-01.00110 \
crg/Hughes/2007-03-23-01.00111 \
crg/Hughes/2007-03-23-01.00112 \
crg/Hughes/2007-03-23-01.00113 \
crg/Hughes/2007-03-23-01.00114 \
crg/Hughes/2007-03-23-01.00115 \
crg/Hughes/2007-03-23-01.00116 \
crg/Hughes/2007-03-23-01.00117 \
crg/Hughes/2007-03-23-01.00118 \
crg/Hughes/2007-03-23-01.00119 \
crg/Hughes/2007-03-23-01.00120 \
crg/Hughes/2007-03-23-01.00121 \
crg/Hughes/2007-03-23-01.00122 \
crg/Hughes/2007-03-23-01.00123 \
crg/Hughes/2007-03-23-01.00124 \
crg/Hughes/2007-03-23-01.00125 \
crg/Hughes/2007-03-23-01.00126 \
crg/Hughes/2007-03-23-01.00127 \
crg/Hughes/2007-03-23-01.00128 \
crg/Hughes/2007-03-23-01.00129 \
crg/Hughes/2007-03-23-01.00130 \
crg/Hughes/2007-03-23-01.00131 \
crg/Hughes/2007-03-23-01.00132 \
crg/Hughes/2007-03-23-01.00133 \
crg/Hughes/2007-03-23-01.00134 \
crg/Hughes/2007-03-23-01.00135 \
crg/Hughes/2007-03-23-01.00136 \
crg/Hughes/2007-03-23-01.00137 \
crg/Hughes/2007-03-23-01.00138 \
crg/Hughes/2007-03-23-01.00139 \
crg/Hughes/2007-03-23-01.00140 \
crg/Hughes/2007-03-23-01.00141 \
crg/Hughes/2007-03-23-01.00142 \
crg/Hughes/2007-03-23-01.00143 \
crg/Hughes/2007-03-23-01.00144 \
crg/Hughes/2007-03-23-01.00145 \
crg/Hughes/2007-03-23-01.00146 \
crg/Hughes/2007-03-23-01.00147 \
crg/Hughes/2007-03-23-01.00148 \
crg/Hughes/2007-03-23-01.00149 \
crg/Hughes/2007-03-23-01.00150 \
crg/Hughes/2007-03-23-01.00151 \
crg/Hughes/2007-03-23-01.00152 \
crg/Hughes/2007-03-23-01.00153 \
crg/Hughes/2007-03-23-01.00154 \
crg/Hughes/2007-03-23-01.00155 \
crg/Hughes/2007-03-23-01.00156 \
crg/Hughes/2007-03-23-01.00157 \
crg/Hughes/2007-03-23-01.00158 \
crg/Hughes/2007-03-23-01.00159 \
crg/Hughes/2007-03-23-01.00160 \
crg/Hughes/2007-03-23-01.00161 \
crg/Hughes/2007-03-23-01.00162 \
crg/Hughes/2007-03-23-01.00163 \
crg/Hughes/2007-03-23-01.00164 \
crg/Hughes/2007-03-23-01.00165 \
crg/Hughes/2007-03-23-01.00166 \
crg/Hughes/2007-03-23-01.00167 \
crg/Hughes/2007-03-23-01.00168 \
crg/Hughes/2007-03-23-01.00169 \
crg/Hughes/2007-03-23-01.00170 \
crg/Hughes/2007-03-23-01.00171 \
crg/Hughes/2007-03-23-01.00172 \
crg/Hughes/2007-03-23-01.00173 \
crg/Hughes/2007-03-23-01.00174 \
crg/Hughes/2007-03-23-01.00175 \
crg/Hughes/2007-03-23-01.00176 \
crg/Hughes/2007-03-23-01.00177 \
crg/Hughes/2007-03-23-01.00178 \
crg/Hughes/2007-03-23-01.00179 \
crg/Hughes/2007-03-23-01.00180 \
crg/Hughes/2007-03-23-01.00181 \
crg/Hughes/2007-03-23-01.00182 \
crg/Hughes/2007-03-23-01.00183 \
crg/Hughes/2007-03-23-01.00184 \
crg/Hughes/2007-03-23-01.00185 \
crg/Hughes/2007-03-23-01.00186 \
crg/Hughes/2007-03-23-01.00187 \
crg/Hughes/2007-03-23-01.00188 \
crg/Hughes/2007-03-23-01.00189 \
crg/Hughes/2007-03-23-01.00190 \
crg/Hughes/2007-03-23-01.00191 \
crg/Hughes/2007-03-23-01.00192 \
crg/Hughes/2007-03-23-01.00193 \
crg/Hughes/2007-03-23-01.00194 \
crg/Hughes/2007-03-23-01.00195 \
crg/Hughes/2007-03-23-01.00196 \
crg/Hughes/2007-03-23-01.00197 \
crg/Hughes/2007-03-23-01.00198 \
crg/Hughes/2007-03-23-01.00199 \
crg/Hughes/2007-03-23-01.00200 \
crg/Hughes/2007-03-23-01.00201 \
crg/Hughes/2007-03-23-01.00202 \
crg/Hughes/2007-03-23-01.00203 \
crg/Hughes/2007-03-23-01.00204 \
crg/Hughes/2007-03-23-01.00205 \
crg/Hughes/2007-03-23-01.00206 \
crg/Hughes/2007-03-23-01.00207 \
crg/Hughes/2007-03-23-01.00208 \
crg/Hughes/2007-03-23-01.00209 \
crg/Hughes/2007-03-23-01.00210 \
crg/Hughes/2007-03-23-01.00211 \
crg/Hughes/2007-03-23-01.00212 \
crg/Hughes/2007-03-23-01.00213 \
crg/Hughes/2007-03-23-01.00214 \
crg/Hughes/2007-03-23-01.00215 \
crg/Hughes/2007-03-23-01.00216 \
crg/Hughes/2007-03-23-01.00217 \
crg/Hughes/2007-03-23-01.00218 \
crg/Hughes/2007-03-23-01.00219 \
crg/Hughes/2007-03-23-01.00220 \
crg/Hughes/2007-03-23-01.00221 \
crg/Hughes/2007-03-23-01.00222 \
crg/Hughes/2007-03-23-01.00223 \
crg/Hughes/2007-03-23-01.00224 \
crg/Hughes/2007-03-23-01.00225 \
crg/Hughes/2007-03-23-01.00226 \
crg/Hughes/2007-03-23-01.00227 \
crg/Hughes/2007-03-23-01.00228 \
crg/Hughes/2007-03-23-01.00229 \
crg/Hughes/2007-03-23-01.00230 \
crg/Hughes/2007-03-23-01.00231 \
crg/Hughes/2007-03-23-01.00232 \
crg/Hughes/2007-03-23-01.00233 \
crg/Hughes/2007-03-23-01.00234 \
crg/Hughes/2007-03-23-01.00235 \
crg/Hughes/2007-03-23-01.00236 \
crg/Hughes/2007-03-23-01.00237 \
crg/Hughes/2007-03-23-01.00238 \
crg/Hughes/2007-03-23-01.00239 \
crg/Hughes/2007-03-23-01.00240 \
crg/Hughes/2007-03-23-01.00241 \
crg/Hughes/2007-03-23-01.00242 \
crg/Hughes/2007-03-23-01.00243 \
crg/Hughes/2007-03-23-01.00244 \
crg/Hughes/2007-03-23-01.00245 \
crg/Hughes/2007-03-23-01.00246 \
crg/Hughes/2007-03-23-01.00247 \
crg/Hughes/2007-03-23-01.00248 \
crg/Hughes/2007-03-23-01.00249 \
crg/Hughes/2007-03-23-01.00250 \
crg/Hughes/2007-03-23-01.00251 \
crg/Hughes/2007-03-23-01.00252 \
crg/Hughes/2007-03-23-01.00253 \
crg/Hughes/2007-03-23-01.00254 \
crg/Hughes/2007-03-23-01.00255 \
crg/Hughes/2007-03-23-01.00256 \
crg/Hughes/2007-03-23-01.00257 \
crg/Hughes/2007-03-23-01.00258 \
crg/Hughes/2007-03-23-01.00259 \
crg/Hughes/2007-03-23-01.00260 \
crg/Hughes/2007-03-23-01.00261 \
crg/Hughes/2007-03-23-01.00262 \
crg/Hughes/2007-03-23-01.00263 \
crg/Hughes/2007-03-23-01.00264 \
crg/Hughes/2007-03-23-01.00265 \
crg/Hughes/2007-03-23-01.00266 \
crg/Hughes/2007-03-23-01.00267 \
crg/Hughes/2007-03-23-01.00268 \
crg/Hughes/2007-03-23-01.00269 \
crg/Hughes/2007-03-23-01.00270 \
crg/Hughes/2007-03-23-01.00271 \
crg/Hughes/2007-03-23-01.00272 \
crg/Hughes/2007-03-23-01.00273 \
crg/Hughes/2007-03-23-01.00274 \
crg/Hughes/2007-03-23-01.00275 \
crg/Hughes/2007-03-23-01.00276 \
crg/Hughes/2007-03-23-01.00277 \
crg/Hughes/2007-03-23-01.00278 \
crg/Hughes/2007-03-23-01.00279 \
crg/Hughes/2007-03-23-01.00280 \
crg/Hughes/2007-03-23-01.00281 \
crg/Hughes/2007-03-23-01.00282 \
crg/Hughes/2007-03-23-01.00283 \
crg/Hughes/2007-03-23-01.00284 \
crg/Hughes/2007-03-23-01.00285 \
crg/Hughes/2007-03-23-01.00286 \
crg/Hughes/2007-03-23-01.00287 \
crg/Hughes/2007-03-23-01.00288 \
crg/Hughes/2007-03-23-01.00289 \
crg/Hughes/2007-03-23-01.00290 \
crg/Hughes/2007-03-23-01.00291 \
crg/Hughes/2007-03-23-01.00292 \
crg/Hughes/2007-03-23-01.00293 \
crg/Hughes/2007-03-23-01.00294 \
crg/Hughes/2007-03-23-01.00295 \
crg/Hughes/2007-03-23-01.00296 \
crg/Hughes/2007-03-23-01.00297 \
crg/Hughes/2007-03-23-01.00298 \
crg/Hughes/2007-03-23-01.00299 \
crg/Hughes/2007-03-23-01.00300 \
crg/Hughes/2007-03-23-01.00301 \
crg/Hughes/2007-03-23-01.00302 \
crg/Hughes/2007-03-23-01.00303 \
crg/Hughes/2007-03-23-01.00304 \
crg/Hughes/2007-03-23-01.00305 \
crg/Hughes/2007-03-23-01.00306 \
crg/Hughes/2007-03-23-01.00307 \
crg/Hughes/2007-03-23-01.00308 \
crg/Hughes/2007-03-23-01.00309 \
crg/Hughes/2007-03-23-01.00310 \
crg/Hughes/2007-03-23-01.00311 \
crg/Hughes/2007-03-23-01.00312 \
crg/Hughes/2007-03-23-01.00313 \
crg/Hughes/2007-03-23-01.00314 \
crg/Hughes/2007-03-23-01.00315 \
crg/Hughes/2007-03-23-01.00316 \
crg/Hughes/2007-03-23-01.00317 \
crg/Hughes/2007-03-23-01.00318 \
crg/Hughes/2007-03-23-01.00319 \
crg/Hughes/2007-03-23-01.00320 \
crg/Hughes/2007-03-23-01.00321 \
crg/Hughes/2007-03-23-01.00322 \
crg/Hughes/2007-03-23-01.00323 \
crg/Hughes/2007-03-23-01.00324 \
crg/Hughes/2007-03-23-01.00325 \
crg/Hughes/2007-03-23-01.00326 \
crg/Hughes/2007-03-23-01.00327 \
crg/Hughes/2007-03-23-01.00328 \
crg/Hughes/2007-03-23-01.00329 \
crg/Hughes/2007-03-23-01.00330 \
crg/Hughes/2007-03-23-01.00331 \
crg/Hughes/2007-03-23-01.00332 \
crg/Hughes/2007-03-23-01.00333 \
crg/Hughes/2007-03-23-01.00334 \
crg/Hughes/2007-03-23-01.00335 \
crg/Hughes/2007-03-23-01.00336 \
crg/Hughes/2007-03-23-01.00337 \
crg/Hughes/2007-03-23-01.00338 \
crg/Hughes/2007-03-23-01.00339 \
crg/Hughes/2007-03-23-01.00340 \
crg/Hughes/2007-03-23-01.00341 \
crg/Hughes/2007-03-23-01.00342 \
crg/Hughes/2007-03-23-01.00343 \
crg/Hughes/2007-03-23-01.00344 \
crg/Hughes/2007-03-23-01.00345 \
crg/Hughes/2007-03-23-01.00346 \
crg/Hughes/2007-03-23-01.00347 \
crg/Hughes/2007-03-23-01.00348 \
crg/Hughes/2007-03-23-01.00349 \
crg/Hughes/2007-03-23-01.00350 \
crg/Hughes/2007-03-23-01.00351 \
crg/Hughes/2007-03-23-01.00352 \
crg/Hughes/2007-03-23-01.00353 \
crg/Hughes/2007-03-23-01.00354 \
crg/Hughes/2007-03-23-01.00355 \
crg/Hughes/2007-03-23-01.00356 \
crg/Hughes/2007-03-23-01.00357 \
crg/Hughes/2007-03-23-01.00358 \
crg/Hughes/2007-03-23-01.00359 \
crg/Hughes/2007-03-23-01.00360 \
crg/Hughes/2007-03-23-01.00361 \
crg/Hughes/2007-03-23-01.00362 \
crg/Hughes/2007-03-23-01.00363 \
crg/Hughes/2007-03-23-01.00364 \
crg/Hughes/2007-03-23-01.00365 \
crg/Hughes/2007-03-23-01.00366 \
crg/Hughes/2007-03-23-01.00367 \
crg/Hughes/2007-03-23-01.00368 \
crg/Hughes/2007-03-23-01.00369 \
crg/Hughes/2007-03-23-01.00370 \
crg/Hughes/2007-03-23-01.00371 \
crg/Hughes/2007-03-23-01.00372 \
crg/Hughes/2007-03-23-01.00373 \
crg/Hughes/2007-03-23-01.00374 \
crg/Hughes/2007-03-23-01.00375 \
crg/Hughes/2007-03-23-01.00376 \
crg/Hughes/2007-03-23-01.00377 \
crg/Hughes/2007-03-23-01.00378 \
crg/Hughes/2007-03-23-01.00379 \
crg/Hughes/2007-03-23-01.00380 \
crg/Hughes/2007-03-23-01.00381 \
crg/Hughes/2007-03-23-01.00382 \
crg/Hughes/2007-03-23-01.00383 \
crg/Hughes/2007-03-23-01.00384 \
crg/Hughes/2007-03-23-01.00385 \
crg/Hughes/2007-03-23-01.00386 \
crg/Hughes/2007-03-23-01.00387 \
crg/Hughes/2007-03-23-01.00388 \
crg/Hughes/2007-03-23-01.00389 \
crg/Hughes/2007-03-23-01.00390 \
crg/Hughes/2007-03-23-01.00391 \
crg/Hughes/2007-03-23-01.00392 \
crg/Hughes/2007-03-23-01.00393 \
crg/Hughes/2007-03-23-01.00394 \
crg/Hughes/2007-03-23-01.00395 \
crg/Hughes/2007-03-23-01.00396 \
crg/Hughes/2007-03-23-01.00397 \
crg/Hughes/2007-03-23-01.00398 \
crg/Hughes/2007-03-23-01.00399 \
crg/Hughes/2007-03-23-01.00400 \
crg/Hughes/2007-03-23-01.00401 \
crg/Hughes/2007-03-23-01.00402 \
crg/Hughes/2007-03-23-01.00403 \
crg/Hughes/2007-03-23-01.00404 \
crg/Hughes/2007-03-23-01.00405 \
crg/Hughes/2007-03-23-01.00406 \
crg/Hughes/2007-03-23-01.00407 \
crg/Hughes/2007-03-23-01.00408 \
crg/Hughes/2007-03-23-01.00409 \
crg/Hughes/2007-03-23-01.00410 \
crg/Hughes/2007-03-23-01.00411 \
crg/Hughes/2007-03-23-01.00412 \
crg/Hughes/2007-03-23-01.00413 \
crg/Hughes/2007-03-23-01.00414 \
crg/Hughes/2007-03-23-01.00415 \
crg/Hughes/2007-03-23-01.00416 \
crg/Hughes/2007-03-23-01.00417 \
crg/Hughes/2007-03-23-01.00418 \
crg/Hughes/2007-03-23-01.00419 \
crg/Hughes/2007-03-23-01.00420 \
crg/Hughes/2007-03-23-01.00421 \
crg/Hughes/2007-03-23-01.00422 \
crg/Hughes/2007-03-23-01.00423 \
crg/Hughes/2007-03-23-01.00424 \
crg/Hughes/2007-03-23-01.00425 \
crg/Hughes/2007-03-23-01.00426 \
crg/Hughes/2007-03-23-01.00427 \
crg/Hughes/2007-03-23-01.00428 \
crg/Hughes/2007-03-23-01.00429 \
crg/Hughes/2007-03-23-01.00430 \
crg/Hughes/2007-03-23-01.00431 \
crg/Hughes/2007-03-23-01.00432 \
crg/Hughes/2007-03-23-01.00433 \
crg/Hughes/2007-03-23-01.00434 \
crg/Hughes/2007-03-23-01.00435 \
crg/Hughes/2007-03-23-01.00436 \
crg/Hughes/2007-03-23-01.00437 \
crg/Hughes/2007-03-23-01.00438 \
crg/Hughes/2007-03-23-01.00439 \
crg/Hughes/2007-03-23-01.00440 \
crg/Hughes/2007-03-23-01.00441 \
crg/Hughes/2007-03-23-01.00442 \
crg/Hughes/2007-03-23-01.00443 \
crg/Hughes/2007-03-23-01.00444 \
crg/Hughes/2007-03-23-01.00445 \
crg/Hughes/2007-03-23-01.00446 \
crg/Hughes/2007-03-23-01.00447 \
crg/Hughes/2007-03-23-01.00448 \
crg/Hughes/2007-03-23-01.00449 \
crg/Hughes/2007-03-23-01.00450 \
crg/Hughes/2007-03-23-01.00451 \
crg/Hughes/2007-03-23-01.00452 \
crg/Hughes/2007-03-23-01.00453 \
crg/Hughes/2007-03-23-01.00454 \
crg/Hughes/2007-03-23-01.00455 \
crg/Hughes/2007-03-23-01.00456 \
crg/Hughes/2007-03-23-01.00457 \
crg/Hughes/2007-03-23-01.00458 \
crg/Hughes/2007-03-23-01.00459 \
crg/Hughes/2007-03-23-01.00460 \
crg/Hughes/2007-03-23-01.00461 \
crg/Hughes/2007-03-23-01.00462 \
crg/Hughes/2007-03-23-01.00463 \
crg/Hughes/2007-03-23-01.00464 \
crg/Hughes/2007-03-23-01.00465 \
crg/Hughes/2007-03-23-01.00466 \
crg/Hughes/2007-03-23-01.00467 \
crg/Hughes/2007-03-23-01.00468 \
crg/Hughes/2007-03-23-01.00469 \
crg/Hughes/2007-03-23-01.00470 \
crg/Hughes/2007-03-23-01.00471 \
crg/Hughes/2007-03-23-01.00472 \
crg/Hughes/2007-03-23-01.00473 \
crg/Hughes/2007-03-23-01.00474 \
crg/Hughes/2007-03-23-01.00475 \
crg/Hughes/2007-03-23-01.00476 \
crg/Hughes/2007-03-23-01.00477 \
crg/Hughes/2007-03-23-01.00478 \
crg/Hughes/2007-03-23-01.00479 \
crg/Hughes/2007-03-23-01.00480 \
crg/Hughes/2007-03-23-01.00481 \
crg/Hughes/2007-03-23-01.00482 \
crg/Hughes/2007-03-23-01.00483 \
crg/Hughes/2007-03-23-01.00484 \
crg/Hughes/2007-03-23-01.00485 \
crg/Hughes/2007-03-23-01.00486 \
crg/Hughes/2007-03-23-01.00487 \
crg/Hughes/2007-03-23-01.00488 \
crg/Hughes/2007-03-23-01.00489 \
crg/Hughes/2007-03-23-01.00490 \
crg/Hughes/2007-03-23-01.00491 \
crg/Hughes/2007-03-23-01.00492 \
crg/Hughes/2007-03-23-01.00493 \
crg/Hughes/2007-03-23-01.00494 \
crg/Hughes/2007-03-23-01.00495 \
crg/Hughes/2007-03-23-01.00496 \
crg/Hughes/2007-03-23-01.00497 \
crg/Hughes/2007-03-23-01.00498 \
crg/Hughes/2007-03-23-01.00499 \
crg/Hughes/2007-03-23-01.00500 \
crg/Hughes/2007-03-23-01.00501 \
crg/Hughes/2007-03-23-01.00502 \
crg/Hughes/2007-03-23-01.00503 \
crg/Hughes/2007-03-23-01.00504 \
crg/Hughes/2007-03-23-01.00505 \
crg/Hughes/2007-03-23-01.00506 \
crg/Hughes/2007-03-23-01.00507 \
crg/Hughes/2007-03-23-01.00508 \
crg/Hughes/2007-03-23-01.00509 \
crg/Hughes/2007-03-23-01.00510 \
crg/Hughes/2007-03-23-01.00511 \
crg/Hughes/2007-03-23-01.00512 \
crg/Hughes/2007-03-23-01.00513 \
crg/Hughes/2007-03-23-01.00514 \
crg/Hughes/2007-03-23-01.00515 \
crg/Hughes/2007-03-23-01.00516 \
crg/Hughes/2007-03-23-01.00517 \
crg/Hughes/2007-03-23-01.00518 \
crg/Hughes/2007-03-23-01.00519 \
crg/Hughes/2007-03-23-01.00520 \
crg/Hughes/2007-03-23-01.00521 \
crg/Hughes/2007-03-23-01.00522 \
crg/Hughes/2007-03-23-01.00523 \
crg/Hughes/2007-03-23-01.00524 \
crg/Hughes/2007-03-23-01.00525 \
crg/Hughes/2007-03-23-01.00526 \
crg/Hughes/2007-03-23-01.00527 \
crg/Hughes/2007-03-23-01.00528 \
crg/Hughes/2007-03-23-01.00529 \
crg/Hughes/2007-03-23-01.00530 \
crg/Hughes/2007-03-23-01.00531 \
crg/Hughes/2007-03-23-01.00532 \
crg/Hughes/2007-03-23-01.00533 \
crg/Hughes/2007-03-23-01.00534 \
crg/Hughes/2007-03-23-01.00535 \
crg/Hughes/2007-03-23-01.00536 \
crg/Hughes/2007-03-23-01.00537 \
crg/Hughes/2007-03-23-01.00538 \
crg/Hughes/2007-03-23-01.00539 \
crg/Hughes/2007-03-23-01.00540 \
crg/Hughes/2007-03-23-01.00541 \
crg/Hughes/2007-03-23-01.00542 \
crg/Hughes/2007-03-23-01.00543 \
crg/Hughes/2007-03-23-01.00544 \
crg/Hughes/2007-03-23-01.00545 \
crg/Hughes/2007-03-23-01.00546 \
crg/Hughes/2007-03-23-01.00547 \
crg/Hughes/2007-03-23-01.00548 \
crg/Hughes/2007-03-23-01.00549 \
crg/Hughes/2007-03-23-01.00550 \
crg/Hughes/2007-03-23-01.00551 \
crg/Hughes/2007-03-23-01.00552 \
crg/Hughes/2007-03-23-01.00553 \
crg/Hughes/2007-03-23-01.00554 \
crg/Hughes/2007-03-23-01.00555 \
crg/Hughes/2007-03-23-01.00556 \
crg/Hughes/2007-03-23-01.00557 \
crg/Hughes/2007-03-23-01.00558 \
crg/Hughes/2007-03-23-01.00559 \
crg/Hughes/2007-03-23-01.00560 \
crg/Hughes/2007-03-23-01.00561 \
crg/Hughes/2007-03-23-01.00562 \
crg/Hughes/2007-03-23-01.00563 \
crg/Hughes/2007-03-23-01.00564 \
crg/Hughes/2007-03-23-01.00565 \
crg/Hughes/2007-03-23-01.00566 \
crg/Hughes/2007-03-23-01.00567 \
crg/Hughes/2007-03-23-01.00568 \
crg/Hughes/2007-03-23-01.00569 \
crg/Hughes/2007-03-23-01.00570 \
crg/Hughes/2007-03-23-01.00571 \
crg/Hughes/2007-03-23-01.00572 \
crg/Hughes/2007-03-23-01.00573 \
crg/Hughes/2007-03-23-01.00574 \
crg/Hughes/2007-03-23-01.00575 \
crg/Hughes/2007-03-23-01.00576 \
crg/Hughes/2007-03-23-01.00577 \
crg/Hughes/2007-03-23-01.00578 \
crg/Hughes/2007-03-23-01.00579 \
crg/Hughes/2007-03-23-01.00580 \
crg/Hughes/2007-03-23-01.00581 \
crg/Hughes/2007-03-23-01.00582 \
crg/Hughes/2007-03-23-01.00583 \
crg/Hughes/2007-03-23-01.00584 \
crg/Hughes/2007-03-23-01.00585 \
crg/Hughes/2007-03-23-01.00586 \
crg/Hughes/2007-03-23-01.00587 \
crg/Hughes/2007-03-23-01.00588 \
crg/Hughes/2007-03-23-01.00589 \
crg/Hughes/2007-03-23-01.00590 \
crg/Hughes/2007-03-23-01.00591 \
crg/Hughes/2007-03-23-01.00592 \
crg/Hughes/2007-03-23-01.00593 \
crg/Hughes/2007-03-23-01.00594 \
crg/Hughes/2007-03-23-01.00595 \
crg/Hughes/2007-03-23-01.00596 \
crg/Hughes/2007-03-23-01.00597 \
crg/Hughes/2007-03-23-01.00598 \
crg/Hughes/2007-03-23-01.00599 \
crg/Hughes/2007-03-23-01.00600 \
crg/Hughes/2007-03-23-01.00601 \
crg/Hughes/2007-03-23-01.00602 \
crg/Hughes/2007-03-23-01.00603 \
crg/Hughes/2007-03-23-01.00604 \
crg/Hughes/2007-03-23-01.00605 \
crg/Hughes/2007-03-23-01.00606 \
crg/Hughes/2007-03-23-01.00607 \
crg/Hughes/2007-03-23-01.00608 \
crg/Hughes/2007-03-23-01.00609 \
crg/Hughes/2007-03-23-01.00610 \
crg/Hughes/2007-03-23-01.00611 \
crg/Hughes/2007-03-23-01.00612 \
crg/Hughes/2007-03-23-01.00613 \
crg/Hughes/2007-03-23-01.00614 \
crg/Hughes/2007-03-23-01.00615 \
crg/Hughes/2007-03-23-01.00616 \
crg/Hughes/2007-03-23-01.00617 \
crg/Hughes/2007-03-23-01.00618 \
crg/Hughes/2007-03-23-01.00619 \
crg/Hughes/2007-03-23-01.00620 \
crg/Hughes/2007-03-23-01.00621 \
crg/Hughes/2007-03-23-01.00622 \
crg/Hughes/2007-03-23-01.00623 \
crg/Hughes/2007-03-23-01.00624 \
crg/Hughes/2007-03-23-01.00625 \
crg/Hughes/2007-03-23-01.00626 \
crg/Hughes/2007-03-23-01.00627 \
crg/Hughes/2007-03-23-01.00628 \
crg/Hughes/2007-03-23-01.00629 \
crg/Hughes/2007-03-23-01.00630 \
crg/Hughes/2007-03-23-01.00631 \
crg/Hughes/2007-03-23-01.00632 \
crg/Hughes/2007-03-23-01.00633 \
crg/Hughes/2007-03-23-01.00634 \
crg/Hughes/2007-03-23-01.00635 \
crg/Hughes/2007-03-23-01.00636 \
crg/Hughes/2007-03-23-01.00637 \
crg/Hughes/2007-03-23-01.00638 \
crg/Hughes/2007-03-23-01.00639 \
crg/Hughes/2007-03-23-01.00640 \
crg/Hughes/2007-03-23-01.00641 \
crg/Hughes/2007-03-23-01.00642 \
crg/Hughes/2007-03-23-01.00643 \
crg/Hughes/2007-03-23-01.00644 \
crg/Hughes/2007-03-23-01.00645 \
crg/Hughes/2007-03-23-01.00646 \
crg/Hughes/2007-03-23-01.00647 \
crg/Hughes/2007-03-23-01.00648 \
crg/Hughes/2007-03-23-01.00649 \
crg/Hughes/2007-03-23-01.00650 \
crg/Hughes/2007-03-23-01.00651 \
crg/Hughes/2007-03-23-01.00652 \
crg/Hughes/2007-03-23-01.00653 \
crg/Hughes/2007-03-23-01.00654 \
crg/Hughes/2007-03-23-01.00655 \
crg/Hughes/2007-03-23-01.00656 \
crg/Hughes/2007-03-23-01.00657 \
crg/Hughes/2007-03-23-01.00658 \
crg/Hughes/2007-03-23-01.00659 \
crg/Hughes/2007-03-23-01.00660 \
crg/Hughes/2007-03-23-01.00661 \
crg/Hughes/2007-03-23-01.00662 \
crg/Hughes/2007-03-23-01.00663 \
crg/Hughes/2007-03-23-01.00664 \
crg/Hughes/2007-03-23-01.00665 \
crg/Hughes/2007-03-23-01.00666 \
crg/Hughes/2007-03-23-01.00667 \
crg/Hughes/2007-03-23-01.00668 \
crg/Hughes/2007-03-23-01.00669 \
crg/Hughes/2007-03-23-01.00670 \
crg/Hughes/2007-03-23-01.00671 \
crg/Hughes/2007-03-23-01.00672 \
crg/Hughes/2007-03-23-01.00673 \
crg/Hughes/2007-03-23-01.00674 \
crg/Hughes/2007-03-23-01.00675 \
crg/Hughes/2007-03-23-01.00676 \
crg/Hughes/2007-03-23-01.00677 \
crg/Hughes/2007-03-23-01.00678 \
crg/Hughes/2007-03-23-01.00679 \
crg/Hughes/2007-03-23-01.00680 \
crg/Hughes/2007-03-23-01.00681 \
crg/Hughes/2007-03-23-01.00682 \
crg/Hughes/2007-03-23-01.00683 \
crg/Hughes/2007-03-23-01.00684 \
crg/Hughes/2007-03-23-01.00685 \
crg/Hughes/2007-03-23-01.00686 \
crg/Hughes/2007-03-23-01.00687 \
crg/Hughes/2007-03-23-01.00688 \
crg/Hughes/2007-03-23-01.00689 \
crg/Hughes/2007-03-23-01.00690 \
crg/Hughes/2007-03-23-01.00691 \
crg/Hughes/2007-03-23-01.00692 \
crg/Hughes/2007-03-23-01.00693 \
crg/Hughes/2007-03-23-01.00694 \
crg/Hughes/2007-03-23-01.00695 \
crg/Hughes/2007-03-23-01.00696 \
crg/Hughes/2007-03-23-01.00697 \
crg/Hughes/2007-03-23-01.00698 \
crg/Hughes/2007-03-23-01.00699 \
crg/Hughes/2007-03-23-01.00700 \
crg/Hughes/2007-03-23-01.00701 \
crg/Hughes/2007-03-23-01.00702 \
crg/Hughes/2007-03-23-01.00703 \
crg/Hughes/2007-03-23-01.00704 \
crg/Hughes/2007-03-23-01.00705 \
crg/Hughes/2007-03-23-01.00706 \
crg/Hughes/2007-03-23-01.00707 \
crg/Hughes/2007-03-23-01.00708 \
crg/Hughes/2007-03-23-01.00709 \
crg/Hughes/2007-03-23-01.00710 \
crg/Hughes/2007-03-23-01.00711 \
crg/Hughes/2007-03-23-01.00712 \
crg/Hughes/2007-03-23-01.00713 \
crg/Hughes/2007-03-23-01.00714 \
crg/Hughes/2007-03-23-01.00715 \
crg/Hughes/2007-03-23-01.00716 \
crg/Hughes/2007-03-23-01.00717 \
crg/Hughes/2007-03-23-01.00718 \
crg/Hughes/2007-03-23-01.00719 \
crg/Hughes/2007-03-23-01.00720 \
crg/Hughes/2007-03-23-01.00721 \
crg/Hughes/2007-03-23-01.00722 \
crg/Hughes/2007-03-23-01.00723 \
crg/Hughes/2007-03-23-01.00724 \
crg/Hughes/2007-03-23-01.00725 \
crg/Hughes/2007-03-23-01.00726 \
crg/Hughes/2007-03-23-01.00727 \
crg/Hughes/2007-03-23-01.00728 \
crg/Hughes/2007-03-23-01.00729 \
crg/Hughes/2007-03-23-01.00730 \
crg/Hughes/2007-03-23-01.00731 \
crg/Hughes/2007-03-23-01.00732 \
crg/Hughes/2007-03-23-01.00733 \
crg/Hughes/2007-03-23-01.00734 \
crg/Hughes/2007-03-23-01.00735 \
crg/Hughes/2007-03-23-01.00736 \
crg/Hughes/2007-03-23-01.00737 \
crg/Hughes/2007-03-23-01.00738 \
crg/Hughes/2007-03-23-01.00739 \
crg/Hughes/2007-03-23-01.00740 \
crg/Hughes/2007-03-23-01.00741 \
crg/Hughes/2007-03-23-01.00742 \
crg/Hughes/2007-03-23-01.00743 \
crg/Hughes/2007-03-23-01.00744 \
crg/Hughes/2007-03-23-01.00745 \
crg/Hughes/2007-03-23-01.00746 \
crg/Hughes/2007-03-23-01.00747 \
crg/Hughes/2007-03-23-01.00748 \
crg/Hughes/2007-03-23-01.00749 \
crg/Hughes/2007-03-23-01.00750 \
crg/Hughes/2007-03-23-01.00751 \
crg/Hughes/2007-03-23-01.00752 \
crg/Hughes/2007-03-23-01.00753 \
crg/Hughes/2007-03-23-01.00754 \
crg/Hughes/2007-03-23-01.00755 \
crg/Hughes/2007-03-23-01.00756 \
crg/Hughes/2007-03-23-01.00757 \
crg/Hughes/2007-03-23-01.00758 \
crg/Hughes/2007-03-23-01.00759 \
crg/Hughes/2007-03-23-01.00760 \
crg/Hughes/2007-03-23-01.00761 \
crg/Hughes/2007-03-23-01.00762 \
crg/Hughes/2007-03-23-01.00763 \
crg/Hughes/2007-03-23-01.00764 \
crg/Hughes/2007-03-23-01.00765 \
crg/Hughes/2007-03-23-01.00766 \
crg/Hughes/2007-03-23-01.00767 \
crg/Hughes/2007-03-23-01.00768 \
crg/Hughes/2007-03-23-01.00769 \
crg/Hughes/2007-03-23-01.00770 \
crg/Hughes/2007-03-23-01.00771 \
crg/Hughes/2007-03-23-01.00772 \
crg/Hughes/2007-03-23-01.00773 \
crg/Hughes/2007-03-23-01.00774 \
crg/Hughes/2007-03-23-01.00775 \
crg/Hughes/2007-03-23-01.00776 \
crg/Hughes/2007-03-23-01.00777 \
crg/Hughes/2007-03-23-01.00778 \
crg/Hughes/2007-03-23-01.00779 \
crg/Hughes/2007-03-23-01.00780 \
crg/Hughes/2007-03-23-01.00781 \
crg/Hughes/2007-03-23-01.00782 \
crg/Hughes/2007-03-23-01.00783 \
crg/Hughes/2007-03-23-01.00784 \
crg/Hughes/2007-03-23-01.00785 \
crg/Hughes/2007-03-23-01.00786 \
crg/Hughes/2007-03-23-01.00787 \
crg/Hughes/2007-03-23-01.00788 \
crg/Hughes/2007-03-23-01.00789 \
crg/Hughes/2007-03-23-01.00790 \
crg/Hughes/2007-03-23-01.00791 \
crg/Hughes/2007-03-23-01.00792 \
crg/Hughes/2007-03-23-01.00793 \
crg/Hughes/2007-03-23-01.00794 \
crg/Hughes/2007-03-23-01.00795 \
crg/Hughes/2007-03-23-01.00796 \
crg/Hughes/2007-03-23-01.00797 \
crg/Hughes/2007-03-23-01.00798 \
crg/Hughes/2007-03-23-01.00799 \
crg/Hughes/2007-03-23-01.00800 \
crg/Hughes/2007-03-23-01.00801 \
crg/Hughes/2007-03-23-01.00802 \
crg/Hughes/2007-03-23-01.00803 \
crg/Hughes/2007-03-23-01.00804 \
crg/Hughes/2007-03-23-01.00805 \
crg/Hughes/2007-03-23-01.00806 \
crg/Hughes/2007-03-23-01.00807 \
crg/Hughes/2007-03-23-01.00808 \
crg/Hughes/2007-03-23-01.00809 \
crg/Hughes/2007-03-23-01.00810 \
crg/Hughes/2007-03-23-01.00811 \
crg/Hughes/2007-03-23-01.00812 \
crg/Hughes/2007-03-23-01.00813 \
crg/Hughes/2007-03-23-01.00814 \
crg/Hughes/2007-03-23-01.00815 \
crg/Hughes/2007-03-23-01.00816 \
crg/Hughes/2007-03-23-01.00817 \
crg/Hughes/2007-03-23-01.00818 \
crg/Hughes/2007-03-23-01.00819 \
crg/Hughes/2007-03-23-01.00820 \
crg/Hughes/2007-03-23-01.00821 \
crg/Hughes/2007-03-23-01.00822 \
crg/Hughes/2007-03-23-01.00823 \
crg/Hughes/2007-03-23-01.00824 \
crg/Hughes/2007-03-23-01.00825 \
crg/Hughes/2007-03-23-01.00826 \
crg/Hughes/2007-03-23-01.00827 \
crg/Hughes/2007-03-23-01.00828 \
crg/Hughes/2007-03-23-01.00829 \
crg/Hughes/2007-03-23-01.00830 \
crg/Hughes/2007-03-23-01.00831 \
crg/Hughes/2007-03-23-01.00832 \
crg/Hughes/2007-03-23-01.00833 \
crg/Hughes/2007-03-23-01.00834 \
crg/Hughes/2007-03-23-01.00835 \
crg/Hughes/2007-03-23-01.00836 \
crg/Hughes/2007-03-23-01.00837 \
crg/Hughes/2007-03-23-01.00838 \
crg/Hughes/2007-03-23-01.00839 \
crg/Hughes/2007-03-23-01.00840 \
crg/Hughes/2007-03-23-01.00841 \
crg/Hughes/2007-03-23-01.00842 \
crg/Hughes/2007-03-23-01.00843 \
crg/Hughes/2007-03-23-01.00844 \
crg/Hughes/2007-03-23-01.00845 \
crg/Hughes/2007-03-23-01.00846 \
crg/Hughes/2007-03-23-01.00847 \
crg/Hughes/2007-03-23-01.00848 \
crg/Hughes/2007-03-23-01.00849 \
crg/Hughes/2007-03-23-01.00850 \
crg/Hughes/2007-03-23-01.00851 \
crg/Hughes/2007-03-23-01.00852 \
crg/Hughes/2007-03-23-01.00853 \
crg/Hughes/2007-03-23-01.00854 \
crg/Hughes/2007-03-23-01.00855 \
crg/Hughes/2007-03-23-01.00856 \
crg/Hughes/2007-03-23-01.00857 \
crg/Hughes/2007-03-23-01.00858 \
crg/Hughes/2007-03-23-01.00859 \
crg/Hughes/2007-03-23-01.00860 \
crg/Hughes/2007-03-23-01.00861 \
crg/Hughes/2007-03-23-01.00862 \
crg/Hughes/2007-03-23-01.00863 \
crg/Hughes/2007-03-23-01.00864 \
crg/Hughes/2007-03-23-01.00865 \
crg/Hughes/2007-03-23-01.00866 \
crg/Hughes/2007-03-23-01.00867 \
crg/Hughes/2007-03-23-01.00868 \
crg/Hughes/2007-03-23-01.00869 \
crg/Hughes/2007-03-23-01.00870 \
crg/Hughes/2007-03-23-01.00871 \
crg/Hughes/2007-03-23-01.00872 \
crg/Hughes/2007-03-23-01.00873 \
crg/Hughes/2007-03-23-01.00874 \
crg/Hughes/2007-03-23-01.00875 \
crg/Hughes/2007-03-23-01.00876 \
crg/Hughes/2007-03-23-01.00877 \
crg/Hughes/2007-03-23-01.00878 \
crg/Hughes/2007-03-23-01.00879 \
crg/Hughes/2007-03-23-01.00880 \
crg/Hughes/2007-03-23-01.00881 \
crg/Hughes/2007-03-23-01.00882 \
crg/Hughes/2007-03-23-01.00883 \
crg/Hughes/2007-03-23-01.00884 \
crg/Hughes/2007-03-23-01.00885 \
crg/Hughes/2007-03-23-01.00886 \
crg/Hughes/2007-03-23-01.00887 \
crg/Hughes/2007-03-23-01.00888 \
crg/Hughes/2007-03-23-01.00889 \
crg/Hughes/2007-03-23-01.00890 \
crg/Hughes/2007-03-23-01.00891 \
crg/Hughes/2007-03-23-01.00892 \
crg/Hughes/2007-03-23-01.00893 \
crg/Hughes/2007-03-23-01.00894 \
crg/Hughes/2007-03-23-01.00895 \
crg/Hughes/2007-03-23-01.00896 \
crg/Hughes/2007-03-23-01.00897 \
crg/Hughes/2007-03-23-01.00898 \
crg/Hughes/2007-03-23-01.00899 \
crg/Hughes/2007-03-23-01.00900 \
crg/Hughes/2007-03-23-01.00901 \
crg/Hughes/2007-03-23-01.00902 \
crg/Hughes/2007-03-23-01.00903 \
crg/Hughes/2007-03-23-01.00904 \
crg/Hughes/2007-03-23-01.00905 \
crg/Hughes/2007-03-23-01.00906 \
crg/Hughes/2007-03-23-01.00907 \
crg/Hughes/2007-03-23-01.00908 \
crg/Hughes/2007-03-23-01.00909 \
crg/Hughes/2007-03-23-01.00910 \
crg/Hughes/2007-03-23-01.00911 \
crg/Hughes/2007-03-23-01.00912 \
crg/Hughes/2007-03-23-01.00913 \
crg/Hughes/2007-03-23-01.00914 \
crg/Hughes/2007-03-23-01.00915 \
crg/Hughes/2007-03-23-01.00916 \
crg/Hughes/2007-03-23-01.00917 \
crg/Hughes/2007-03-23-01.00918 \
crg/Hughes/2007-03-23-01.00919 \
crg/Hughes/2007-03-23-01.00920 \
crg/Hughes/2007-03-23-01.00921 \
crg/Hughes/2007-03-23-01.00922 \
crg/Hughes/2007-03-23-01.00923 \
crg/Hughes/2007-03-23-01.00924 \
crg/Hughes/2007-03-23-01.00925 \
crg/Hughes/2007-03-23-01.00926 \
crg/Hughes/2007-03-23-01.00927 \
crg/Hughes/2007-03-23-01.00928 \
crg/Hughes/2007-03-23-01.00929 \
crg/Hughes/2007-03-23-01.00930 \
crg/Hughes/2007-03-23-01.00931 \
crg/Hughes/2007-03-23-01.00932 \
crg/Hughes/2007-03-23-01.00933 \
crg/Hughes/2007-03-23-01.00934 \
crg/Hughes/2007-03-23-01.00935 \
crg/Hughes/2007-03-23-01.00936 \
crg/Hughes/2007-03-23-01.00937 \
crg/Hughes/2007-03-23-01.00938 \
crg/Hughes/2007-03-23-01.00939 \
crg/Hughes/2007-03-23-01.00940 \
crg/Hughes/2007-03-23-01.00941 \
crg/Hughes/2007-03-23-01.00942 \
crg/Hughes/2007-03-23-01.00943 \
crg/Hughes/2007-03-23-01.00944 \
crg/Hughes/2007-03-23-01.00945 \
crg/Hughes/2007-03-23-01.00946 \
crg/Hughes/2007-03-23-01.00947 \
crg/Hughes/2007-03-23-01.00948 \
crg/Hughes/2007-03-23-01.00949 \
crg/Hughes/2007-03-23-01.00950 \
crg/Hughes/2007-03-23-01.00951 \
crg/Hughes/2007-03-23-01.00952 \
crg/Hughes/2007-03-23-01.00953 \
crg/Hughes/2007-03-23-01.00954 \
crg/Hughes/2007-03-23-01.00955 \
crg/Hughes/2007-03-23-01.00956 \
crg/Hughes/2007-03-23-01.00957 \
crg/Hughes/2007-03-23-01.00958 \
crg/Hughes/2007-03-23-01.00959 \
crg/Hughes/2007-03-23-01.00960 \
crg/Hughes/2007-03-23-01.00961 \
crg/Hughes/2007-03-23-01.00962 \
crg/Hughes/2007-03-23-01.00963 \
crg/Hughes/2007-03-23-01.00964 \
crg/Hughes/2007-03-23-01.00965 \
crg/Hughes/2007-03-23-01.00966 \
crg/Hughes/2007-03-23-01.00967 \
crg/Hughes/2007-03-23-01.00968 \
crg/Hughes/2007-03-23-01.00969 \
crg/Hughes/2007-03-23-01.00970 \
crg/Hughes/2007-03-23-01.00971 \
crg/Hughes/2007-03-23-01.00972 \
crg/Hughes/2007-03-23-01.00973 \
crg/Hughes/2007-03-23-01.00974 \
crg/Hughes/2007-03-23-01.00975 \
crg/Hughes/2007-03-23-01.00976 \
crg/Hughes/2007-03-23-01.00977 \
crg/Hughes/2007-03-23-01.00978 \
crg/Hughes/2007-03-23-01.00979 \
crg/Hughes/2007-03-23-01.00980 \
crg/Hughes/2007-03-23-01.00981 \
crg/Hughes/2007-03-23-01.00982 \
crg/Hughes/2007-03-23-01.00983 \
crg/Hughes/2007-03-23-01.00984 \
crg/Hughes/2007-03-23-01.00985 \
crg/Hughes/2007-03-23-01.00986 \
crg/Hughes/2007-03-23-01.00987 \
crg/Hughes/2007-03-23-01.00988 \
crg/Hughes/2007-03-23-01.00989 \
crg/Hughes/2007-03-23-01.00990 \
crg/Hughes/2007-03-23-01.00991 \
crg/Hughes/2007-03-23-01.00992 \
crg/Hughes/2007-03-23-01.00993 \
crg/Hughes/2007-03-23-01.00994 \
crg/Hughes/2007-03-23-01.00995 \
crg/Hughes/2007-03-23-01.00996 \
crg/Hughes/2007-03-23-01.00997 \
crg/Hughes/2007-03-23-01.00998 \
crg/Hughes/2007-03-23-01.00999 \
crg/Hughes/2007-03-23-01.01000
