datasetdir = $(datadir)/datasets/


nobase_dist_dataset_DATA = \
fim/mushroom.dat \
crg/test/0.dag \
crg/test/1.dag \
gri/test.dat \
gri/I4408.dat \
crg/Hughes10/2007-03-23-01.00001 \
crg/Hughes10/2007-03-23-01.00002 \
crg/Hughes10/2007-03-23-01.00003 \
crg/Hughes10/2007-03-23-01.00004 \
crg/Hughes10/2007-03-23-01.00005 \
crg/Hughes10/2007-03-23-01.00006 \
crg/Hughes10/2007-03-23-01.00007 \
crg/Hughes10/2007-03-23-01.00008 \
crg/Hughes10/2007-03-23-01.00009 \
crg/Hughes10/2007-03-23-01.00010 \
crg/Hughes10-100.gspan
