
all_scripts= compare_outputs.sh \
	convert_to_gspan.pl	\
	crg_compare_nbr.sh	\
	fim_compare_nbr.sh	\
	fim_full_compare.sh	\
	gri_full_compare.sh	\
	gspan_remove_1graphs.pl	\
	sort_line_grads.pl	\
	sort_line.pl		\
	stats.pl		\
	stat_traces.pl		\
	timing.sh               

dist_bin_SCRIPTS= $(all_scripts)
